feat:add responses

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -28,6 +28,14 @@
                         </ul>
                     </nav>
                 </div>
+                <div class="menu-btn">
+                    <div class="menu-btn-burger"></div>
+                </div>
+                <div class="drop-down">
+                    <li><a href="#about" id="highlight">About the shellter</a></li>
+                    <li><a href="../pets/index.html">Our pets</a></li>
+                    <li><a href="#help">Help the shelter</a></li>
+                </div>
             </header>
             <div class="section-one-puppy">
                 <div class="section-one-puppt-one">
@@ -79,7 +87,7 @@
                                 <button class="learnMoreBtn">Learn more</button>
                               </div>
                             </div>
-                            <div class="card">
+                            <div class="card astalavista">
                               <img
                                 src="../../assets/images/pets-jennifer.png"
                                 alt="Jennifer"
@@ -89,28 +97,28 @@
                                 <button class="learnMoreBtn">Learn more</button>
                               </div>
                             </div>
-                            <div class="card">
+                            <div class="card hide">
                               <img src="../../assets/images/pets-woody.png" alt="Woody" />
                               <p>Woody</p>
                               <div class="learnMoreBox">
                                 <button class="learnMoreBtn">Learn more</button>
                               </div>
                             </div>
-                            <div class="card">
+                            <div class="card hide">
                                 <img src="../../assets/images/pets-charly.png" alt="Charly" />
                                 <p>Charly</p>
                                 <div class="learnMoreBox">
                                   <button class="learnMoreBtn">Learn more</button>
                                 </div>
                               </div>
-                              <div class="card">
+                              <div class="card hide">
                                 <img src="../../assets/images/pets-sophia.png" alt="sophia" />
                                 <p>Sophia</p>
                                 <div class="learnMoreBox">
                                   <button class="learnMoreBtn">Learn more</button>
                                 </div>
                               </div>
-                              <div class="card">
+                              <div class="card hide">
                                 <img src="../../assets/images/pets-freddie.png" alt="Freddie" />
                                 <p>Freddie</p>
                                 <div class="learnMoreBox">
@@ -125,94 +133,77 @@
                 </div>     
             </div>
         </div>
-        <div class="section-four" id="help">
-            <div class="section-four-box">
-               <div class="four-box-title">
-                   <h2>How you can help our shelter</h2>
-               </div>
-               <div class="four-box-flex">
-                <div class="one-box">
-                    <div class="flex-item-one">
-                        <div class="item-one-image">
-                            <img src="../../assets/icons/icon-pet-food.svg" alt="petfood">
-                        </div>
-                        <div class="item-one-title">
-                            <h4>Pet food</h4>
-                        </div>
+        <div class="help" id="help">
+            <div class="help-center">
+              <div class="help-heading">
+                <h3>How you can help our shelter</h3>
+              </div>
+              <div class="list">
+                    <div class="list-column">
+                    <img
+                        src="../../assets/icons/icon-pet-food.svg"
+                        alt="pet-food"
+                    />
+                    <h4>pet-food</h4>
                     </div>
-                    <div class="flex-item-two">
-                        <div class="item-one-image">
-                            <img src="../../assets/icons/icon-transportation.svg" alt="transportation">
-                        </div>
-                        <div class="item-one-title">
-                            <h4>Transportation</h4>
-                        </div>
+                    <div class="list-column">
+                    <img
+                        src="../../assets/icons/icon-transportation.svg"
+                        alt="Transportation"
+                    />
+                    <h4>Transportation</h4>
                     </div>
-                    <div class="flex-item-three">
-                        <div class="item-one-image">
-                            <img src="../../assets/icons/icon-toys.svg" alt="toys">
-                        </div>
-                        <div class="item-one-title">
-                            <h4>Toys</h4>
-                        </div>
+                    <div class="list-column">
+                    <img src="../../assets/icons/icon-toys.svg" alt="Toys" />
+                    <h4>Toys</h4>
                     </div>
-                    <div class="flex-item-four">
-                        <div class="item-one-image">
-                            <img src="../../assets/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups">
-                        </div>
-                        <div class="item-one-title">
-                            <h4>bowls and cups</h4>
-                        </div>
+                    <div class="list-column">
+                    <img
+                        src="../../assets/icons/icon-bowls-and-cups.svg"
+                        alt="Bowls and cups"
+                    />
+                    <h4>Bowls and cups</h4>
                     </div>
-                    <div class="flex-item-five">
-                        <div class="item-one-image">
-                            <img src="../../assets/icons/icon-shampoos.svg" alt="shampoos">
-                        </div>
-                        <div class="item-one-title">
-                            <h4>Shampoos</h4>
-                        </div>
+                    <div class="list-column">
+                    <img
+                        src="../../assets/icons/icon-shampoos.svg"
+                        id="box6"
+                        alt="Shampoos"
+                    />
+                    <h4>Shampoos</h4>
                     </div>
-
-                </div>
-                <div class="box-two">
-                    <div class="flex-item-six">
-                        <div class="item-one-image">
-                            <img src="../../assets/icons/icon-vitamins.svg" alt="vitamins">
-                        </div>
-                        <div class="item-one-title">
-                            <h4>Vitamins</h4>
-                        </div>
+                    <div class="list-column">
+                    <img
+                        src="../../assets/icons/icon-vitamins.svg"
+                        alt="Vitamins"
+                    />
+                    <h4>Vitamins</h4>
                     </div>
-                    <div class="flex-item-seven">
-                        <div class="item-one-image">
-                            <img src="../../assets/icons/icon-medicines.svg" alt="medicines">
-                        </div>
-                        <div class="item-one-title">
-                            <h4>Medicines</h4>
-                        </div>
+                    <div class="list-column">
+                    <img
+                        src="../../assets/icons/icon-medicines.svg"
+                        alt="Medicines"
+                    />
+                    <h4>Medicines</h4>
                     </div>
-                    <div class="flex-item-eight">
-                        <div class="item-one-image">
-                            <img src="../../assets/icons/icon-collars-leashes.svg" alt="collars-leashes">
-                        </div>
-                        <div class="item-one-title">
-                            <h4>collars / leashes</h4>
-                        </div>
+                    <div class="list-column">
+                    <img
+                        src="../../assets/icons/icon-collars-leashes.svg"
+                        alt="Collars / leashes"
+                    />
+                    <h4>Collars / leashes</h4>
                     </div>
-                    <div class="flex-item-nine">
-                        <div class="item-one-image">
-                            <img src="../../assets/icons/icon-sleeping-area.svg" alt="sleeping-area">
-                        </div>
-                        <div class="item-one-title">
-                            <h4>sleeping area</h4>
-                        </div>
+                    <div class="list-column">
+                    <img
+                        src="../../assets/icons/icon-sleeping-area.svg"
+                        alt="Sleeping areas"
+                    />
+                    <h4>Sleeping areas</h4>
                     </div>
-
-                </div>
+              </div>
             </div>
-            </div>
-        </div>
-        <div class="section-five">
+          </div>
+          <div class="section-five">
             <div class="five-box">
                 <div class="five-box-img">
                     <img src="../../assets/images/donation-dog.png" alt="donation-dog">
